<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fred.garbagecollector.fragment.DeclarationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/valhatech_baniere"
                android:contentDescription="" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textViewDeclaration" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/declarationLineLayWeb" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewWeb"
                    android:src="@drawable/ic_launcher_48dp" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/onTheWeb"
                    android:id="@+id/textViewWeb"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/declarationLineLayTT" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewTwitter"
                    android:src="@drawable/ic_twitter_48dp" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/onTwitter"
                    android:id="@+id/textViewTwitter"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/declarationLineLayFB" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewFacebook"
                    android:src="@drawable/ic_fb_48dp" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/onFB"
                    android:id="@+id/textViewFacebook"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
