<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentDisplayTrash"
    tools:context="com.example.fred.garbagecollector.fragment.DisplayTrashFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/displayTrashCategory"
            android:id="@+id/textViewDisplayTrashCategory"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDisplayTrashCategory" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewDisplayTrash"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="80dp"
                    android:minWidth="80dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.31">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/displayTrashSince"
                            android:id="@+id/textViewDisplayTrash2"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12 hours 26 minutes"
                            android:id="@+id/textViewDisplayTrashSince" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Distance :"
                            android:id="@+id/textViewDisplayTrashDistance"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="34 meters"
                            android:id="@+id/textViewDisplayTrashDisplayDistance" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayTrashGpsCoordinate"
                    android:id="@+id/textViewDisplayTrash1"
                    android:textStyle="bold" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="43.530004, 5.420359"
                    android:id="@+id/editTextDisplayTrashLatAndLong"
                    android:inputType="none"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayTrashAddress"
                    android:id="@+id/textViewDisplayTrash3"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="955 avenue moulin"
                    android:id="@+id/editTextDisplayTrashAddress"
                    android:inputType="none"
                    android:textIsSelectable="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonDisplayTrashShare"
                        android:src="@drawable/ic_share_black_48dp"
                        android:layout_gravity="right" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonDisplayTrashCopy"
                        android:src="@drawable/ic_content_copy_black_48dp"
                        android:layout_gravity="right" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonDisplayTrashRemoved"
                        android:src="@drawable/ic_delete_forever_black_48dp"
                        android:layout_gravity="right" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonDisplayTrashGmap"
                        android:src="@drawable/ic_directions_black_48dp"
                        android:layout_gravity="right" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MODIFY"
                        android:id="@+id/buttonDisplayTrashModify" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
